--- a/SCADA/angularapp/src/app/components/rtu-popup/rtu-popup.component.css
+++ b/SCADA/angularapp/src/app/components/rtu-popup/rtu-popup.component.css
@@ -1,28 +1,3 @@
-.admin-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-}
-
-.open-popup-button {
-  padding: 10px 20px;
-  font-size: 16px;
-  background-color: #4CAF50;
-  color: #fff;
-  border: none;
-  cursor: pointer;
-}
-
-  .open-popup-button:hover {
-    background-color: #45a049;
-  }
-
-  .open-popup-button:focus {
-    outline: none;
-  }
-
 .popup-overlay {
   position: fixed;
   top: 0;
@@ -42,8 +17,13 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
+  .popup-form h3 {
+    margin-top: 0;
+  }
+
   .popup-form input {
-    width: 100%;
+    width: 90%;
+    margin-left:25px;
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
@@ -57,7 +37,21 @@
     color: #fff;
     border: none;
     cursor: pointer;
+    margin-right: 20px;
   }
+
+  .popup-form .button-container {
+    display: flex;
+    justify-content: center;
+  }
+
+    .popup-form .button-container button {
+      margin-right: 20px; /* Add margin between buttons */
+    }
+
+      .popup-form .button-container button:last-child {
+        margin-right: 0; /* Remove margin from the last button */
+      }
 
     .popup-form button:hover {
       background-color: #45a049;
@@ -66,3 +60,11 @@
     .popup-form button:focus {
       outline: none;
     }
+
+
+/* Existing CSS styles */
+
+.error-message {
+  color: red;
+  margin-bottom: 10px;
+}
