--- a/SCADA/angularapp/src/app/components/tag-management/tag-management.component.html
+++ b/SCADA/angularapp/src/app/components/tag-management/tag-management.component.html
@@ -1,8 +1,9 @@
 <div class="navbar">
-<button (click)="openAddTagPopup('digitalInput')">Add DI Tag</button>
-<button (click)="openAddTagPopup('digitalOutput')">Add DO Tag</button>
-<button (click)="openAddTagPopup('analogInput')">Add AI Tag</button>
-<button (click)="openAddTagPopup('analogOutput')">Add AO Tag</button>
+  <button (click)="openAddTagPopup('digitalInput')">Add DI Tag</button>
+  <button (click)="openAddTagPopup('digitalOutput')">Add DO Tag</button>
+  <button (click)="openAddTagPopup('analogInput')">Add AI Tag</button>
+  <button (click)="openAddTagPopup('analogOutput')">Add AO Tag</button>
+  <button (click)="openRtuPopup()">Add RTU</button>
 </div>
 
 <div class="table-container">
@@ -34,16 +35,16 @@
           <td>{{ digitalInput.scanTime }}</td>
           <td>
             <div class="turn">
-            <span [ngClass]="{'icon-green': digitalInput.isScanning, 'icon-red': !digitalInput.isScanning}"></span>
-           <span class="turntxt"> {{digitalInput.isScanning ? 'ON' : 'OFF' }}</span>
-        </div>
+              <span [ngClass]="{'icon-green': digitalInput.isScanning, 'icon-red': !digitalInput.isScanning}"></span>
+              <span class="turntxt"> {{digitalInput.isScanning ? 'ON' : 'OFF' }}</span>
+            </div>
           </td>
           <td>
             <button class="scan" (click)="turnDigitalInput(digitalInput.id)">
               {{ digitalInput.isScanning ? 'Turn Scan OFF' : 'Turn Scan ON' }}
             </button>
-        </td>
-        <td>
+          </td>
+          <td>
             <button class="remove" (click)="deleteDigitalInput(digitalInput.id)">Remove</button>
           </td>
         </tr>
@@ -75,16 +76,16 @@
           <td>{{ analogInput.scanTime }}</td>
           <td>
             <div class="turn">
-            <span [ngClass]="{'icon-green': analogInput.isScanning, 'icon-red': !analogInput.isScanning}"></span>
-           <span class="turntxt">{{ analogInput.isScanning ? 'ON' : 'OFF' }}</span> 
-        </div>
+              <span [ngClass]="{'icon-green': analogInput.isScanning, 'icon-red': !analogInput.isScanning}"></span>
+              <span class="turntxt">{{ analogInput.isScanning ? 'ON' : 'OFF' }}</span>
+            </div>
           </td>
           <td>
             <button class="scan" (click)="turnAnalogInput(analogInput.id)">
               {{ analogInput.isScanning ? 'Turn Scan OFF' : 'Turn Scan ON' }}
             </button>
-        </td>
-    <td>
+          </td>
+          <td>
             <button class="remove" (click)="deleteAnalogInput(analogInput.id)">Remove</button>
           </td>
         </tr>
@@ -109,78 +110,82 @@
   </table>
 </div>
 <!-- Popup forms -->
-
 <!-- Analog Input Form -->
 <div class="popup" *ngIf="showAddTagPopup && tagType === 'analogInput'">
-    <h3>Add Analog Input Tag</h3>
-    <form (ngSubmit)="createAnalogInput()">
-        <label for="analogInputDescription">Description:</label>
-        <input type="text" id="analogInputDescription" name="analogInputDescription"
-            [(ngModel)]="analogInputForm.description">
+  <h3>Add Analog Input Tag</h3>
+  <form (ngSubmit)="createAnalogInput()">
+    <label for="analogInputDescription">Description:</label>
+    <input type="text" id="analogInputDescription" name="analogInputDescription"
+           [(ngModel)]="analogInputForm.description">
 
-        <label for="analogInputScanTime">Scan Time:</label>
-        <input type="number" id="analogInputScanTime" name="analogInputScanTime" [(ngModel)]="analogInputForm.scanTime">
-        <label for="analogInputLowLimit">Low Limit:</label>
-        <input type="number" id="analogInputLowLimit" name="analogInputLowLimit" [(ngModel)]="analogInputForm.lowLimit">
-        <label for="analogInputHighLimit">High Limit:</label>
-        <input type="number" id="analogInputHighLimit" name="analogInputHighLimit"
-            [(ngModel)]="analogInputForm.highLimit">
-        <label for="analogInputUnit">Unit:</label>
-        <input type="text" id="analogInputUnit" name="analogInputUnit" [(ngModel)]="analogInputForm.unit">
-
-        <button type="submit">Add Analog Input Tag</button>
-        <button (click)="closeAddTagPopup()">Cancel</button>
-    </form>
+    <label for="analogInputScanTime">Scan Time:</label>
+    <input type="number" id="analogInputScanTime" name="analogInputScanTime" [(ngModel)]="analogInputForm.scanTime">
+    <label for="analogInputLowLimit">Low Limit:</label>
+    <input type="number" id="analogInputLowLimit" name="analogInputLowLimit" [(ngModel)]="analogInputForm.lowLimit">
+    <label for="analogInputHighLimit">High Limit:</label>
+    <input type="number" id="analogInputHighLimit" name="analogInputHighLimit"
+           [(ngModel)]="analogInputForm.highLimit">
+    <label for="analogInputUnit">Unit:</label>
+    <input type="text" id="analogInputUnit" name="analogInputUnit" [(ngModel)]="analogInputForm.unit">
+    <label for="analogInputAddress">I/O Address (from 10 to 100):</label>
+    <input type="number" [(ngModel)]="analogInputForm.AddressId" name="analogInputAddress" required>
+    <button type="submit">Add Analog Input Tag</button>
+    <button (click)="closeAddTagPopup()">Cancel</button>
+  </form>
 </div>
 
 <!-- Analog Output Form -->
 <div class="popup" *ngIf="showAddTagPopup && tagType === 'analogOutput'">
-    <h3>Add Analog Output Tag</h3>
-    <form (ngSubmit)="createAnalogOutput()">
-      <label for="analogOutputDescription">Description:</label>
-      <input type="text" id="analogOutputDescription" name="analogOutputDescription" [(ngModel)]="analogOutputForm.description">
-  
-      <label for="analogOutputInitialValue">Initial Value:</label>
-      <input type="number" id="analogOutputInitialValue" name="analogOutputInitialValue" [(ngModel)]="analogOutputForm.initialValue">
-      <label for="analogOutputLowLimit">Low Limit:</label>
-      <input type="number" id="analogOutputLowLimit" name="analogOutputLowLimit" [(ngModel)]="analogOutputForm.lowLimit">
-      <label for="analogOutputHighLimit">High Limit:</label>
-      <input type="number" id="analogOutputHighLimit" name="analogOutputHighLimit" [(ngModel)]="analogOutputForm.highLimit">
-      <label for="analogOutputUnit">Unit:</label>
-      <input type="text" id="analogOutputUnit" name="analogOutputUnit" [(ngModel)]="analogOutputForm.unit">
-  
-      <button type="submit">Add Analog Output Tag</button>
-      <button (click)="closeAddTagPopup()">Cancel</button>
-    </form>
-  </div>
-  
-  <!-- Digital Input Form -->
-  <div class="popup" *ngIf="showAddTagPopup && tagType === 'digitalInput'">
-    <h3>Add Digital Input Tag</h3>
-    <form (ngSubmit)="createDigitalInput()">
-      <label for="digitalInputDescription">Description:</label>
-      <input type="text" id="digitalInputDescription" name="digitalInputDescription" [(ngModel)]="digitalInputForm.description">
-  
-      <label for="digitalInputScanTime">Scan Time:</label>
-      <input type="number" id="digitalInputScanTime" name="digitalInputScanTime" [(ngModel)]="digitalInputForm.scanTime">
-  
-      <button type="submit">Add Digital Input Tag</button>
-      <button (click)="closeAddTagPopup()">Cancel</button>
-    </form>
-  </div>
-  
-  <!-- Digital Output Form -->
-  <div class="popup" *ngIf="showAddTagPopup && tagType === 'digitalOutput'">
-    <h3>Add Digital Output Tag</h3>
-    <form (ngSubmit)="createDigitalOutput()">
-      <label for="digitalOutputDescription">Description:</label>
-      <input type="text" id="digitalOutputDescription" name="digitalOutputDescription" [(ngModel)]="digitalOutputForm.description">
-  
-      <label for="digitalOutputInitialValue">Initial Value:</label>
-      <input type="number" id="digitalOutputInitialValue" name="digitalOutputInitialValue" [(ngModel)]="digitalOutputForm.initialValue">
-  
-      <button type="submit">Add Digital Output Tag</button>
-      <button (click)="closeAddTagPopup()">Cancel</button>
-    </form>
-  </div>
+  <h3>Add Analog Output Tag</h3>
+  <form (ngSubmit)="createAnalogOutput()">
+    <label for="analogOutputDescription">Description:</label>
+    <input type="text" id="analogOutputDescription" name="analogOutputDescription" [(ngModel)]="analogOutputForm.description">
 
+    <label for="analogOutputInitialValue">Initial Value:</label>
+    <input type="number" id="analogOutputInitialValue" name="analogOutputInitialValue" [(ngModel)]="analogOutputForm.initialValue">
+    <label for="analogOutputLowLimit">Low Limit:</label>
+    <input type="number" id="analogOutputLowLimit" name="analogOutputLowLimit" [(ngModel)]="analogOutputForm.lowLimit">
+    <label for="analogOutputHighLimit">High Limit:</label>
+    <input type="number" id="analogOutputHighLimit" name="analogOutputHighLimit" [(ngModel)]="analogOutputForm.highLimit">
+    <label for="analogOutputUnit">Unit:</label>
+    <input type="text" id="analogOutputUnit" name="analogOutputUnit" [(ngModel)]="analogOutputForm.unit">
+    <label for="analogOutputAddress">I/O Address (from 10 to 100):</label>
+    <input type="number" [(ngModel)]="analogOutputForm.AddressId" name="analogOutputAddress" required>
+    <button type="submit">Add Analog Output Tag</button>
+    <button (click)="closeAddTagPopup()">Cancel</button>
+  </form>
+</div>
+
+<!-- Digital Input Form -->
+<div class="popup" *ngIf="showAddTagPopup && tagType === 'digitalInput'">
+  <h3>Add Digital Input Tag</h3>
+  <form (ngSubmit)="createDigitalInput()">
+    <label for="digitalInputDescription">Description:</label>
+    <input type="text" id="digitalInputDescription" name="digitalInputDescription" [(ngModel)]="digitalInputForm.description">
+
+    <label for="digitalInputScanTime">Scan Time:</label>
+    <input type="number" id="digitalInputScanTime" name="digitalInputScanTime" [(ngModel)]="digitalInputForm.scanTime">
+    <label for="digitalInputAddress">I/O Address (from 10 to 100):</label>
+    <input type="number" [(ngModel)]="digitalInputForm.AddressId" name="digitalInputAddress" required>
+    <button type="submit">Add Digital Input Tag</button>
+    <button (click)="closeAddTagPopup()">Cancel</button>
+  </form>
+</div>
+
+<!-- Digital Output Form -->
+<div class="popup" *ngIf="showAddTagPopup && tagType === 'digitalOutput'">
+  <h3>Add Digital Output Tag</h3>
+  <form (ngSubmit)="createDigitalOutput()">
+    <label for="digitalOutputDescription">Description:</label>
+    <input type="text" id="digitalOutputDescription" name="digitalOutputDescription" [(ngModel)]="digitalOutputForm.description">
+
+    <label for="digitalOutputInitialValue">Initial Value:</label>
+    <input type="number" id="digitalOutputInitialValue" name="digitalOutputInitialValue" [(ngModel)]="digitalOutputForm.initialValue">
+    <label for="digitalOutputAddress">I/O Address (from 10 to 100):</label>
+    <input type="number" [(ngModel)]="digitalOutputForm.AddressId" name="digitalOutputAddress" required>
+    <button type="submit">Add Digital Output Tag</button>
+    <button (click)="closeAddTagPopup()">Cancel</button>
+  </form>
+</div>
+
+<app-rtu-popup *ngIf="showRtuPopup" (submit)="addRTU($event)" (close)="closeRtuPopup()"></app-rtu-popup>
