--- a/SCADA/angularapp/src/app/components/tag-management/tag-management.component.css
+++ b/SCADA/angularapp/src/app/components/tag-management/tag-management.component.css
@@ -1,19 +1,32 @@
+.db-manager-container {
+  top: 0; /* Adjust this value based on your navbar height */
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+}
 h2 {
-    color: blue;
-    font-size: 24px;
-    margin-bottom: 10px;
-  }
+  margin:0;
+}
 
-  .navbar {
-    background-color: #f2f2f2;
-    padding: 10px;
-    display: flex;
-    
-  }
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 70px;
+  background-color: #333;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 50px;
+}
   
   .navbar button {
     padding: 8px 16px;
-    background-color: transparent;
+    margin:10px;
+    background-color: lightgray;
     color: #333;
     border: none;
     border-radius: 4px;
@@ -23,14 +36,86 @@ h2 {
   }
   
   .navbar button:hover {
-    background-color: #ddd;
+    background-color: darkgray;
+  }
+#logout-button {
+  background-color: red;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  height: 50px;
+  font-size: 18px;
+  width: 100px;
+}
+
+  #logout-button:hover {
+    background-color: darkred;
   }
   
   .navbar button.active {
     background-color: #4caf50;
     color: white;
   }
-  
+.content {
+  position: absolute;
+  top: 70px; /* Adjust this value based on your navbar height */
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url('../../../assets/background.jpg');
+  background-size: cover;
+  background-position: center;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 20px;
+}
+
+th,
+td {
+  padding: 12px;
+  text-align: left;
+  border-bottom: 1px solid #ccc;
+}
+
+th {
+  background-color: #f2f2f2;
+  color: #333;
+  font-weight: bold;
+  font-size: 28px;
+}
+
+td {
+  color: #fff;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+tr:nth-child(even) {
+  background-color: rgba(229, 229, 229, 0.2);
+}
+
+tr:hover {
+  background-color: rgba(197, 197, 197, 0.2);
+}
+.popup-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Black transparent background */
+  z-index: 9999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
   .popup {
     position: fixed;
     top: 50%;
