--- a/SCADA/angularapp/src/app/components/report/report.component.css
+++ b/SCADA/angularapp/src/app/components/report/report.component.css
@@ -1,20 +1,32 @@
 .charts{
   margin-top: 20px;
+  margin-bottom: 20px;
   width: 100%;
   height: 500px;
+  background-color: white;
 }
 
 .report-container {
   margin-bottom: 20px;
 }
 
+.hide {
+  display: none;
+}
+
+.show {
+  display: block;
+}
+
 .nav-container {
   display: flex;
   align-items: center;
-  background-color: #f2f2f2;
-  padding: 10px;
+  background-color: #333;
+  color: white;
   overflow-x: auto;
   white-space: nowrap;
+  height: 70px;
+  padding: 0 10px;
 }
 
 .nav-title {
@@ -67,7 +79,20 @@
   
   .results-container {
     border: 1px solid #ccc;
+    position: absolute;
+    top: 70px; /* Adjust this value based on your navbar height */
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url('../../../assets/background.jpg');
+    background-size: cover;
+    background-position: center;
     padding: 10px;
+    background-color: rgba(0, 0, 0, 0.9);
+  }
+
+  h3,h4{
+    color: white;
   }
   
   .results-container h4 {
