--- a/SCADA/angularapp/src/app/components/tag-management/tag-management.component.css
+++ b/SCADA/angularapp/src/app/components/tag-management/tag-management.component.css
@@ -222,6 +222,20 @@ tr:hover {
     background-color: #96954d;
   }
 
+    button.math {
+      background-color: #25BE2A;
+      font-size: 30px;
+      width: 40px;
+      height: 40px;
+      margin-left:5px;
+      margin-right:5px;
+      padding: 0;
+    }
+
+
+      button.math:hover {
+        background-color: #07A20D;
+      }
   button.remove {
     background-color: #ae2525;
   }
