--- a/SCADA/angularapp/src/app/components/report/report.component.css
+++ b/SCADA/angularapp/src/app/components/report/report.component.css
@@ -219,6 +219,10 @@
   .results-container tbody tr:nth-child(even) {
     background-color: #fafafa;
   }
+
+  .results-container tbody tr:nth-child(odd) {
+    background-color: #f7f7f7;
+  }
   
   .results-container tbody tr:hover {
     background-color: #f0f0f0;
