Rework on alarm table

--- a/SCADA/angularapp/src/app/components/tag-management/tag-management.component.html
+++ b/SCADA/angularapp/src/app/components/tag-management/tag-management.component.html
@@ -7,6 +7,8 @@
       <button (click)="openAddTagPopup('analogInput')">Add AI Tag</button>
       <button (click)="openAddTagPopup('analogOutput')">Add AO Tag</button>
       <button (click)="openRtuPopup()">Add RTU</button>
+      <button (click)="toReports()">Reports</button>
+      <button (click)="toAlarms()">Alarms</button>
     </div>
     <button id="logout-button" (click)="logout()">Logout</button>
   </nav>
