--- a/SCADA/angularapp/src/app/components/trending/trending.component.html
+++ b/SCADA/angularapp/src/app/components/trending/trending.component.html
@@ -1,6 +1,7 @@
 <div class="trending-container">
   <nav class="navbar">
     <h2>Trending Data</h2>
+    <button class="btn" (click)="toAlarms()">Alarms</button>
     <button class="logout-button" (click)="logout()">Logout</button>
   </nav>
   <div class="content">
