--- a/SCADA/angularapp/src/app/components/alarms/alarms.component.html
+++ b/SCADA/angularapp/src/app/components/alarms/alarms.component.html
@@ -25,8 +25,22 @@
             <td>{{alarm.id}}</td>
             <td>{{alarm.description }}</td>
             <td>{{alarm.limit}}</td>
-            <td>{{alarm.type}}</td>
-            <td>{{alarm.priority}}</td>
+            <td><ng-container *ngIf="alarm.type === 0">
+              Low
+            </ng-container>
+            <ng-container *ngIf="alarm.type === 1">
+              High
+            </ng-container>
+            </td>
+            <td><ng-container *ngIf="alarm.priority === 2">
+              High Priority
+            </ng-container>
+            <ng-container *ngIf="alarm.priority === 1">
+              Normal Priority
+            </ng-container>
+            <ng-container *ngIf="alarm.priority === 0">
+              Low Priority
+            </ng-container></td>
             <td>
               <button class="remove" (click)="removeAlarm(alarm.id)">Remove</button>
             </td>
@@ -55,7 +69,7 @@
       <option [value]="AlarmType.LOW">Low</option>
       <option [value]="AlarmType.HIGH">High</option>
     </select>
-    <button type="submit">Show</button>
+    <button type="submit">Create</button>
     <button (click)="closePopup()">Cancel</button>
   </form>
 </div>
