--- a/SCADA/angularapp/src/app/components/alarm-triggers/alarm-triggers.component.html
+++ b/SCADA/angularapp/src/app/components/alarm-triggers/alarm-triggers.component.html
@@ -9,10 +9,10 @@
         <tr>
           <th>ID</th>
           <th>Description</th>
-          <th>Address</th>
-          <th>Value</th>
+          <th>Type</th>
           <th>Limit</th>
-          <th>Unit</th>
+          <th>Priority</th>
+          <th>DateTime</th>
         </tr>
       </thead>
       <tbody>
